# HW_WEB_10

./: pyproject.toml
hw_project/: db.sqlite3
hw_project/hw_project/: settings.py
hw_project/users/: urls.py  views.py
